# Model-Agnostic-NLE-Framework

./: A_Model_Agnostic_Framework_for_NLE_of_Predictive_Models.ipynb  LICENSE  README.md  experiment.ipynb  pyproject.toml  requirements.txt
llm_adapters/: NLEFramework.py  __init__.py
nle_core/: NLEFramework.py
notebooks/: experiment.ipynb
src/nle_core/: NLEFramework.py  __init__.py
